fix padding and alignment

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -16,18 +16,7 @@ p {
     grid-template-rows: auto auto auto;
     justify-content: center;
    }
-
-.board-item-container {
-  display: grid;
-  width: 100px;
-  height: 100px;
-  border: 2px solid black;
-  margin: auto;
-  align-content: center;
-  justify-content: center;
-  cursor: pointer;
-}
-
+  
 .board-item_checked {
   overflow: hidden;
   position: relative;
